--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
     environment:
+      TZ: Asia/Tokyo
       POSTGRES_PASSWORD: password
 
   web:
@@ -18,3 +19,6 @@ services:
       - db
     working_dir: "/myapp"
     command: /bin/sh -c "rm -f tmp/pids/server.pid && rails s -p 3000 -b '0.0.0.0'"
+
+    environment:
+      TZ: Asia/Tokyo
